Migrate to React + TypeScript + Vite project
Replaces the original static HTML/CSS/JS implementation with a new React + TypeScript + Vite setup. Adds configuration files for ESLint, TypeScript, and Vite, updates the README with new instructions, and restructures assets and styles. Removes legacy CSS, JS, and image files, and introduces a new StarrySky React component.

--- a/index.html
+++ b/index.html
@@ -1,31 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Sky - Adriano Interaminense</title>
-  <link rel="stylesheet" href="src/css/default.css">
-  <link rel="stylesheet" href="src/css/noite.css">
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-</head>
-<body>
-
-  <div class="noite"></div>
-
-  <div class="constelacao"></div>
-
-  <div class="lua">
-    <div class="textura"></div>
-  </div>
-
-  <div class="chuvaMeteoro"></div>
-
-  <div class="floresta">
-    <img src="src/img/bgTree.png" alt="" />
-  </div>
-
-  <!-- <h1 class="title"><span class="avatar"></span> Adriano Interaminense</h1> -->
-
-  <script type="text/javascript" src="src/js/status.js"></script>
-
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Starry Sky</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
